--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,10 @@ header .container {
   justify-content: space-between;
 }
 
+header .btn-mobile {
+  display: none;
+}
+
 header nav {
   display: flex;
   align-items: center;
@@ -42,6 +46,7 @@ header nav ul li a:hover {
   flex-direction: column;
   align-items: center;
   overflow: hidden;
+  display: none;
 }
 
 .s-hero::after {
@@ -103,6 +108,7 @@ header nav ul li a:hover {
 
 .s-digital {
   padding-top: 12.8rem;
+  display: none;
 }
 
 .s-digital h3 {
@@ -121,6 +127,7 @@ header nav ul li a:hover {
 
 .s-art-front {
   padding: 12.8rem 0;
+  display: none;
 }
 
 .s-art-front .title-text {
@@ -166,6 +173,7 @@ header nav ul li a:hover {
 .s-newsletter {
   padding: 8.9rem 0;
   background-color: var(--pink-10);
+  display: none;
 }
 
 .s-newsletter .container {
@@ -188,6 +196,7 @@ header nav ul li a:hover {
 
 footer {
   padding: 4.8rem 0;
+  display: none;
 }
 
 footer .main-area {
@@ -251,4 +260,33 @@ footer .copy {
 
 footer .copy strong {
   font-weight: 600;
+}
+
+/* Monitores pequenos */
+@media(max-width: 1200px) {
+  
+}
+
+/* Tablet */
+@media(max-width: 991px) {
+
+}
+
+@media(max-width: 768px) {
+  header nav {
+    display: none;
+  }
+  header .btn-mobile {
+    display: block;
+  }
+}
+
+/* Celulares */
+@media(max-width: 560px) {
+  header {
+    height: 7.2rem;
+  }
+  header .logo {
+    max-width: 16rem;
+  }
 }
