--- a/css/main.css
+++ b/css/main.css
@@ -111,7 +111,6 @@ header nav ul li a:hover {
 
 .s-digital {
   padding-top: 12.8rem;
-  display: none;
 }
 
 .s-digital h3 {
@@ -267,13 +266,29 @@ footer .copy strong {
 
 /* Monitores pequenos */
 @media(max-width: 1200px) {
-  
+  .s-digital {
+    padding-top: 6.8rem;
+  }
+  .s-digital ul {
+    gap: 3.2rem;
+    padding-bottom: 6.8rem;
+  }
+  .item-digital .info h6 {
+    font-size: 2rem;
+  }
+  .item-digital .info p {
+    font-size: 1.6rem;
+  }
 }
 
 /* Tablet */
 @media(max-width: 991px) {
  .s-hero::after {
   height: 13rem;
+ }
+ .s-digital ul {
+  flex-direction: column;
+  align-items: center;
  }
 }
 
@@ -339,5 +354,17 @@ footer .copy strong {
   }
   .s-hero::after {
     height: 22rem;
+  }
+  .s-digital {
+    padding-top: 8rem;
+  }
+  .s-digital ul {
+    padding-bottom: 8rem;
+  }
+  .s-digital h3 {
+    font-size: 2.8rem;
+  }
+  .s-digital ul {
+    gap: 6.4rem;
   }
 }
