--- a/css/main.css
+++ b/css/main.css
@@ -129,7 +129,6 @@ header nav ul li a:hover {
 
 .s-art-front {
   padding: 12.8rem 0;
-  display: none;
 }
 
 .s-art-front .title-text {
@@ -175,7 +174,6 @@ header nav ul li a:hover {
 .s-newsletter {
   padding: 8.9rem 0;
   background-color: var(--pink-10);
-  display: none;
 }
 
 .s-newsletter .container {
@@ -198,7 +196,6 @@ header nav ul li a:hover {
 
 footer {
   padding: 4.8rem 0;
-  display: none;
 }
 
 footer .main-area {
@@ -279,6 +276,16 @@ footer .copy strong {
   .item-digital .info p {
     font-size: 1.6rem;
   }
+  .s-art-front {
+    padding: 6rem 0;
+  }
+  .s-art-front .all {
+    gap: 1.6rem;
+  }
+  .s-art-front .all .card-post:first-child,
+  .s-art-front .all .card-post:nth-child(2) {
+    grid-column: span 3;
+  }
 }
 
 /* Tablet */
@@ -290,6 +297,30 @@ footer .copy strong {
   flex-direction: column;
   align-items: center;
  }
+ .s-art-front .title-text {
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 4rem;
+ }
+ .s-art-front .title-text .left {
+   text-align: center;
+   max-width: 100%;
+ }
+ .s-art-front .title-text .left p {
+   max-width: 100%;
+   margin-top: 8px;
+  }
+ .s-art-front .title-text .right {
+   max-width: 100%;
+   text-align: center;
+  }
+  .s-art-front .all {
+    grid-template-columns: 1fr;
+  }
+  .s-art-front .all .card-post:first-child,
+  .s-art-front .all .card-post:nth-child(2) {
+    grid-column: initial;
+  }
 }
 
 @media(max-width: 768px) {
@@ -366,5 +397,20 @@ footer .copy strong {
   }
   .s-digital ul {
     gap: 6.4rem;
+  }
+  .s-art-front {
+    padding: 8rem 0;
+  }
+  .s-art-front .title-text h3 {
+    font-size: 2.8rem;
+    max-width: 22.7rem;
+    margin: 0 auto;
+  }
+  .s-art-front .title-text p {
+    font-size: 1.6rem;
+    margin-top: 0.8rem;
+  }
+  .s-newsletter h2 {
+    font-size: 4rem;
   }
 }
